--- a/dop/style/main.css
+++ b/dop/style/main.css
@@ -19,6 +19,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Montserrat-SemiBold';
 }
 
 body,html{
@@ -63,6 +64,7 @@ ol,ul{
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
 }
 
 .header__container{
@@ -71,6 +73,7 @@ ol,ul{
     display: flex;
     height: auto;
     justify-content: space-between;
+    overflow: hidden;
 }
 
 .logo__container{
@@ -138,6 +141,10 @@ ol,ul{
 
 .main{
     flex: 1 1 auto;
+    overflow: hidden;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .footer{
@@ -150,6 +157,7 @@ ol,ul{
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
 }
 
 .footer__container{
@@ -158,6 +166,55 @@ ol,ul{
     display: flex;
     height: auto;
     justify-content: space-between;
+    overflow: hidden;
+    display: flex;
+}
+
+.footer__container div{
+    display: flex;
+    width: 50%;
+    height: inherit;
+}
+
+.footer__container div:nth-child(1){
+    padding-left: 70px;
+    flex-direction: column;
+    justify-content: center;
+    color: #66FCF1;
+    font-size: 12px;
+}
+
+.footer__container div:nth-child(2){
+    padding-right: 80px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: end;
+    color: #66FCF1;
+    font-size: 12px;
+}
+
+.social__link ul{
+     display: flex;
+     justify-content: start;
+     align-items: center;
+}
+
+.social__link a{
+    margin-left: 7px;
+    margin-right: 7px;
+}
+
+.social__link li:nth-child(1) img{
+    width: 26px;
+    height: 26px;
+}
+.social__link li:nth-child(2) img{
+    width: 19px;
+    height: 19px;
+}
+.social__link li:nth-child(3) img{
+    width: 30px;
+    height: 18px;
 }
 
 
