--- a/dop/style/main.css
+++ b/dop/style/main.css
@@ -37,6 +37,14 @@ a{
     color: #000;
 }
 
+span{
+    font-style: normal;
+}
+
+p{
+    font-style: normal;
+}
+
 h1,h2,h3,h4,h5,h6{
     font-size: 14px;
     font-style: normal;
@@ -143,6 +151,8 @@ ol,ul{
     flex: 1 1 auto;
     overflow: hidden;
     width: 100%;
+    min-height: 100%;
+    background-color: #f5f5f5;
     display: flex;
     flex-direction: column;
 }
