--- a/dop/style/add-curs.css
+++ b/dop/style/add-curs.css
@@ -1,19 +1,131 @@
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 80px auto 200px auto;
+    max-width: 1440px;
+    width: 100%;
+    padding: 0 80px;
+}
 
+.title__page{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 53px;
+}
+.title__page h2{
+    font-family: 'Montserrat-SemiBold';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 144.9%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.1em;
+    color: #1F2833;
+}
 
+.add-curs__form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
 
+.add-curs__section{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+    margin: 16px 0;
+}
+.add-curs__section label{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    padding: 17px 5px;
+    width: 100%;
+    max-width: 442px;
+    min-width: 330px;
 
+    font-family: 'Montserrat-SemiBold';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 26px;
+    line-height: 144.9%;
+    letter-spacing: 0.1em;
 
+    color: #1F2833;
+}
+.add-curs__section input{
+    outline: none;
+    border: none;
+    border-radius: 20px;
+    border: 2px solid #000;
 
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    padding: 10px;
+    max-width: 838px;
+    width: 100%;
+}
+.add-curs__section textarea{
+    outline: none;
+    border: none;
+    border-radius: 20px;
+    border: 2px solid #000;
 
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    padding: 10px;
+    max-width: 838px;
+    width: 100%;
+    min-height: 60px;
 
+    resize: vertical;
+}
+.duraction__block{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    padding: 10px;
+    max-width: 838px;
+    width: 100%;
+}
+.duraction__block .duraction{
+    max-width: 100px;
+    margin-right: 20px;
+}
+.duraction__block span{
+    font-family: 'Montserrat-SemiBold';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 144.9%;
+    letter-spacing: 0.1em;
 
+    color: #1F2833;
+}
 
-
+.file__seection{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 .acardion__container{
     max-width: 1920px;
     width: 100%;
-    padding: 0 75px 0 75px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -33,11 +145,6 @@
     font-size: 26px;
 }
 
-.acardion__container details[open] > summary{
-    color: #0B0C10;
-    background-color: #45A29E;
-}
-
 .acardion__container summary{
     width: fit-content;
     font-family: 'Montserrat-SemiBold'; 
@@ -48,13 +155,13 @@
     font-size: 20px;
     line-height: 144.9%;
     letter-spacing: 0.1em;
-    color: #C5C6C7;
+    color: #1F2833;
     border-radius: 20px;
-    background-color: #1F2833;
+    background-color: transparent;
     padding: 25px;
-    max-width: 1100px;
     width: 100%;
     transition: 0.4s;
+    border: 2px solid #000;
 }
 
 .acardion__container div{
@@ -105,4 +212,181 @@
     width: 100%;
     justify-content: center;
     margin-bottom: 60px;
+}
+
+.btn__section__modul{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.btn__section__modul div:hover{
+    background-color: #1F2833;
+    border-color: #1F2833;
+}
+.btn__section__modul div:hover::after{
+    background-color: #ffffff;
+}
+.btn__section__modul div:hover::before{
+    background-color: #ffffff;
+}
+.btn__modul{
+    outline: none;
+    border: none;
+
+    height: 85px;
+    width: 85px;
+    border: 2px solid #1F2833;
+    border-radius: 50%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    cursor: pointer;
+
+    transition: 0.4s;
+}
+.btn__modul::after{
+    content: "";
+    display: flex;
+    width: 40px;
+    height: 5px;
+    background-color: #1F2833;
+    position: absolute;
+}
+.btn__modul::before{
+    content: "";
+    display: flex;
+    width: 40px;
+    height: 5px;
+    background-color: #1F2833;
+    position: absolute;
+    transform: rotate(90deg);
+}
+.btn__del__modul::before{
+    display: none;
+}
+
+.modul__container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.file__block{
+    width: 100%;
+    justify-content: start;
+}
+
+.file__block input{
+    display: none;
+}
+
+.file__block .input-file{
+    cursor: pointer;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.file__block .input-file img{
+    display: flex;
+    width: 100%;
+    max-width: 20px;
+    margin-right: 12px;
+}
+
+.file__block .input-file span{
+    font-family: 'Montserrat-SemiBold';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 26px;
+    line-height: 144.9%;
+    letter-spacing: 0.1em;
+    color: #1F2833;
+}
+
+.det__block{
+    padding: 0 40px;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+}
+
+.name_file__block{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.name_file__block label{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    padding: 17px 5px;
+    width: 100%;
+    max-width: 442px;
+    min-width: 330px;
+
+    font-family: 'Montserrat-SemiBold';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 26px;
+    line-height: 144.9%;
+    letter-spacing: 0.1em;
+
+    color: #1F2833;
+}
+.name_file__block input{
+    outline: none;
+    border: none;
+    border-radius: 20px;
+    border: 2px solid #000;
+
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    padding: 10px;
+    max-width: 700px;
+    width: 100%;
+}
+
+
+
+.btn__submit{
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+    padding-top: 100px;
+    display: flex;
+}
+.btn__submit button{
+    outline: none;
+    border: none;
+    border: 2px solid #1F2833;
+    border-radius: 10px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    cursor: pointer;
+
+    font-family: 'Montserrat-SemiBold';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 144.9%;
+    letter-spacing: 0.1em;
+
+    color: #1F2833;
+
+    transition: 0.3s;
+}
+.btn__submit button:hover{
+    background-color: #1F2833;
+    color: #fff;
 }
