--- a/dop/style/reg__log.css
+++ b/dop/style/reg__log.css
@@ -1,4 +1,4 @@
-.reg__log__container{
+.reg__log__container {
     width: 100%;
     height: fit-content;
     background-color: #f5f5f5;
@@ -9,35 +9,75 @@
     padding: 130px 0;
 }
 
-.reg__log__container ul{
+.reg__log__container ul {
     display: flex;
     margin-bottom: 140px;
 }
 
-.reg__log__container nav a{
+.reg__log__container nav a {
     display: flex;
     align-items: center;
     height: 58px;
     font-size: 40px;
-    font-family: 'Montserrat-Medium'; 
+    font-family: 'Montserrat-Medium';
 }
-.reg__log__container nav a:nth-child(1){
+
+.reg__log__container nav a:nth-child(1) {
     margin-right: 36px;
 }
 
-.reg__log__container nav .activ{
+.reg__log__container nav .activ {
     border-bottom: 5px solid #45A29E;
     font-family: 'Montserrat-SemiBold';
 }
 
-.reg__log__container .rec__personal{
+.reg__log__container .rec__personal {
     font-size: 16px;
     color: #1F2833;
     font-family: 'Montserrat-Medium';
-    margin-top: 15px; 
+    margin-top: 15px;
     margin-right: 290px;
+    border-bottom: 1px solid transparent;
+    transition: border 0.3s ease-in-out;
 }
 
-.reg__log__container .reg{
+.reg__log__container .rec__personal:hover {
+    border-bottom: 1px solid #1F2833;
+}
+
+.reg__log__container .reg {
     margin-right: 180px;
+}
+
+.input-file {
+    cursor: pointer;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    border-top: 2px solid #F5F5F5;
+    height: 70px;
+}
+
+.input-file img {
+    display: flex;
+    width: 100%;
+    max-width: 20px;
+    margin-right: 12px;
+}
+
+.input-file input {
+    display: none;
+}
+
+.input-file span {
+    font-family: 'Montserrat-SemiBold';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 144.9%;
+    letter-spacing: 0.1em;
+    color: #F5F5F5;
+}
+
+.label__block {
 }
